# FAU-PhD

./: .gitignore  .gitmodules  6730-ComputerDataSecurity-Assignment-01.html  6730-ComputerDataSecurity-Assignment-01.md  AES.cpp  AES.h  CMakeLists.txt  Euclidean.h  Euclidean.py  README.md  Readme.md  el_gamal_pke.cpp  el_gamal_pke.h
.github/workflows/: cmake.yml
